# flare

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  hooks.py  main.py  manage.py  mkdocs.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  scratch.py  settings.py  snapshot.py
examples/: api-with-firestore.py  extract-to-firestore.py  extract-to-postgres.py  extract-to-supabase.py  insert-links.py
examples/server/: app.py  settings.py  utils.py
flare/: __init__.py
flare/api/: __init__.py  errors.py  links.py
flare/cli/: __init__.py  develop.py
flare/commands/: feeds.py  posts.py
flare/common/: errors.py  keywords.py  locale.py  parameters.py  plugins.py  posts.py  scoring.py  sources.py
flare/core/: errors.py  links.py
flare/entities/: __init__.py  errors.py  feeds.py
flare/interfaces/: __init__.py  feeds.py
flare/queue/: tasks.py
legacy/: validators.py
notebooks/: experiment.ipynb
scripts/: batch-ingest.py  create_sample_posts.py  create_user.py  qdrant.py
src/: entities.py  interfaces.py
src/cli/: __init__.py  agent.py  content.py  user.py
src/commands/: __init__.py  agent.py  candidate.py  content.py  edition.py  feeds.py  posts.py  user.py
src/common/: backends.py  constants.py  embeddings.py  errors.py  keywords.py  locale.py  metrics.py  normalize.py  posts.py  scoring.py  sources.py
src/entities/: __init__.py  agent.py  candidate.py  content.py  edition.py  feed.py  feeds.py  tag.py  user.py  user_test.py
src/infrastructure/: backends.py
src/interfaces/: content.py  (+2 more)
tests/: conftest.py
(+116 files in other folders)
